@@ -56,9 +56,9 @@ LINKFLAGS_BYTE=$(INCLUDES) -linkall
 #OCAMLPP=-pp "$(OCAMLBIN)/camlp4o "
 
 TOOLS=$(GENET) $(GENRDFS) \
-	$(GENET_REST) $(GENET_CHAIN) $(GENET_EXEC) $(GENET_GUI)
+	$(GENET_REST) $(GENET_EXEC) $(GENET_GUI)
 TOOLS_BYTE=$(GENET_BYTE) $(GENRDFS_BYTE) \
-	$(GENET_REST_BYTE) $(GENET_CHAIN_BYTE) $(GENET_EXEC_BYTE) $(GENET_GUI_BYTE)
+	$(GENET_REST_BYTE) $(GENET_EXEC_BYTE) $(GENET_GUI_BYTE)
 
 SYSTEM_LIBS=
 SYSTEM_LIBS_BYTE=
@@ -264,6 +264,7 @@ GENET_CMXFILES=	driver/options.cmx \
 	driver/main_cmd.cmx \
 	driver/main_diff.cmx \
 	driver/main_query.cmx \
+	driver/main_chain.cmx \
 	driver/main.cmx
 GENET_CMOFILES=$(GENET_CMXFILES:.cmx=.cmo)
 GENET_CMIFILES=$(GENET_CMXFILES:.cmx=.cmi)
@@ -280,13 +281,6 @@ GENET_REST_CMXFILES=\
 	driver/main_rest.cmx
 GENET_REST_CMOFILES=$(GENET_REST_CMXFILES:.cmx=.cmo)
 GENET_REST_CMIFILES=$(GENET_REST_CMXFILES:.cmx=.cmi)
-
-# Genet-chain files
-GENET_CHAIN_CMXFILES=\
-	driver/options.cmx \
-	driver/main_chain.cmx
-GENET_CHAIN_CMOFILES=$(GENET_CHAIN_CMXFILES:.cmx=.cmo)
-GENET_CHAIN_CMIFILES=$(GENET_CHAIN_CMXFILES:.cmx=.cmi)
 
 # Genet-exec files
 GENET_EXEC_CMXFILES=\
@@ -338,14 +332,6 @@ $(GENET_REST): $(LIB_BASE)	$(LIB_GRDF) $(LIB_IND) $(LIB_CHN) $(LIB_REST) $(GENET
 
 $(GENET_REST_BYTE): $(LIB_BASE_BYTE)	$(LIB_GRDF_BYTE) $(LIB_IND_BYTE) $(LIB_CHN_BYTE) $(LIB_REST_BYTE) $(GENET_REST_CMOFILES)
 	$(OCAMLFIND) ocamlc -package $(BASE_PACKAGES),$(REST_PACKAGES),$(NET_PACKAGES) -linkpkg \
-	$(OCAMLCFLAGS) -o $@ $(LINKFLAGS) $(SYSTEM_LIBS_BYTE) $^
-
-$(GENET_CHAIN): $(LIB_BASE)	$(LIB_GRDF) $(LIB_IND) $(LIB_CHN) $(GENET_CHAIN_CMXFILES)
-	$(OCAMLFIND) ocamlopt -package $(BASE_PACKAGES) -linkpkg \
-	$(OCAMLCFLAGS) -o $@ $(LINKFLAGS) $(SYSTEM_LIBS) $^
-
-$(GENET_CHAIN_BYTE): $(LIB_BASE_BYTE)	$(LIB_GRDF_BYTE) $(LIB_IND_BYTE) $(LIB_CHN_BYTE) $(GENET_CHAIN_CMOFILES)
-	$(OCAMLFIND) ocamlc -package $(BASE_PACKAGES) -linkpkg \
 	$(OCAMLCFLAGS) -o $@ $(LINKFLAGS) $(SYSTEM_LIBS_BYTE) $^
 
 $(GENET_EXEC): $(LIB_BASE)	$(LIB_GRDF) $(LIB_IND) $(LIB_CHN) $(GENET_EXEC_CMXFILES)
