@@ -1,3 +1,5 @@
 Next release:
 mod: genet-diff is replaced by subcommand diff of genet
 mod: genet-query is replaced by subcommand query of genet
+mod: genet-chain is replaced by subcommands chain, flatten
+     and flatten-all of genet
